# hotels-api

./: .env.[mode].example  .env.docker.example  .env.example  .gitignore  Dockerfile  Justfile  Makefile  README.md  alembic.ini  docker-compose.yaml  grafana-dashboard.json  nginx.conf  prometheus.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: bookings.py  config.py  database.py  exceptions.py  hotels.py  logger.py  login.py  main.py  validation.py
app/admin/: auth.py  views.py
app/bookings/: endpoints.py  model.py  repo.py  router.py  schemas.py
app/db/: base_repo.py  core.py  mixins.py  repo_base.py  reset_db.py  types.py
app/db/migrations/: env.py
app/db/migrations/versions/: 1714747888_1ead8edb6df4_create_hotels_table.py  1714774423_0ead1ba398c0_create_users_table.py  1714775618_3e11d1555e35_add_timestamps_to_users.py  1714810310_e8cc3ca09d6f_make_hotels_services_required.py  1714842456_7898385cb572_create_rooms_table.py  1714843940_dc114aa5926e_create_bookings_table.py  1718985507_1ed5da60f065_add_image_name_to_hotels.py  1719435674_a25dd99277b3_add_role_to_users.py
app/hotels/: endpoints.py  model.py  repo.py  router.py  schemas.py  table.py
app/metrics/: router.py
app/pages/: __init__.py  login.html  router.py  welcome.html
app/rooms/: model.py  repo.py  router.py  schemas.py
app/tasks/: celery_app.py  email_service.py  email_templates.py  scheduled.py  tasks.py  worker.py
app/templates/: hotels.jinja
app/upload/: router.py
app/users/: auth.py  deps.py  endpoints.py  enums.py  model.py  repo.py  router.py  schemas.py
app/validation/: date_range.py  utils.py
data/: hotels.csv  rooms.csv
docker/: app.sh
tests/: conftest.py  test_example.py
tests/assertion_helpers/: models.py  user.py
tests/integration/: test_users_router.py
tests/unit/: test_users_repo.py
